--- a/week-3/02-jwt/package.json
+++ b/week-3/02-jwt/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
-    "zod": "^3.22.4"
+    "validator": "^13.12.0",
+    "zod": "^3.23.8"
   }
 }
